--- a/web/src/app/shared/post/post-featured-image.component.scss
+++ b/web/src/app/shared/post/post-featured-image.component.scss
@@ -4,12 +4,12 @@
   display: block;
 
   &.-cover-mode {
-    background: center / auto no-repeat fixed;
+    background: center / auto 100% no-repeat fixed;
     margin: 0 -3.2rem 2.4rem -3.2rem;
     padding-top: 8rem;
 
     @include md {
-      background-size: cover;
+      background-size: cover!important;
     }
 
     ::ng-deep {
@@ -35,5 +35,6 @@
 }
 
 img {
+  border-radius: .4rem;
   max-width: 100%;
 }
